Fix bug with heading in navbar collapsing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,7 +88,7 @@ a {
     }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 370px) {
     .brand-logo span {
         display: none;
     }
